Bump quilt